<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FloatWin Extension for DesktopMode</string>
    <string name="launcher_name">FloatWin Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_description">Floating Windows extension for rooted Desktop Mode users</string>
    <string name="app_blacklist">Ignored apps</string>
    <string name="app_whitelist">Forced apps</string>
    <string name="app_maximized">Maximized apps</string>
    <string name="app_testing">Testing</string>
    <string name="app_statusbar_taskbar">Statusbar Taskbar</string>
    <string name="app_advanced">Advanced</string>
    <string name="app_firstrunwarning_title">Disclaimer</string>
    <string name="app_firstrunwarning_summary">This extension modifies the system. Therefore, bad things can happen, including (but not limited to): crashes, bootloops, bricked devices, cosmic explosions, system instability, alien invasions, etc.\n\nJokes aside, we claim no responsibility for any damage caused by this extension, and by accepting this disclaimer, hold the sole responsibility of any damages done.\n\nIf this scared you, you can calm down a bit. This has been tested on numerous devices without problem. And in effect, nothing SHOULD go wrong. But your device might be different, and it has a small possibility of something backfiring. Hence the disclaimer ;)</string>
    <string name="app_firstrunwarning_positive">GO AHEAD</string>
    <string name="app_firstrunwarning_negative">NEVERMIND</string>
    <string name="option_gravity_1">Top Left Corner</string>
    <string name="option_gravity_2">Top Center</string>
    <string name="option_gravity_3">Top Right Corner</string>
    <string name="option_gravity_4">Left Center</string>
    <string name="option_gravity_5">Center (Default)</string>
    <string name="option_gravity_6">Right Center</string>
    <string name="option_gravity_7">Bottom Left Corner</string>
    <string name="option_gravity_8">Bottom Center</string>
    <string name="option_gravity_9">Bottom Right Corner</string>
    <string name="dnm_title">Drag To Move</string>
    <string name="dnm_transparency">Transparency</string>
    <string name="dnm_close_app">Close Window</string>
    <string name="dnm_minimize">Minimize App</string>
    <string name="dnm_snap_window">Snap Window</string>
    <string name="dnm_snap_window_sub1">Snap (Top)</string>
    <string name="dnm_snap_window_sub2">Snap (Bottom)</string>
    <string name="dnm_snap_window_sub3">Snap (Left)</string>
    <string name="dnm_snap_window_sub4">Snap (Right)</string>
    <string name="dnm_snap_window_sub7">Snap (Bottom Left)</string>
    <string name="dnm_snap_window_sub6">Snap (Top Right)</string>
    <string name="dnm_snap_window_sub5">Snap (Top Left)</string>
    <string name="dnm_snap_window_sub8">Snap (Bottom Right)</string>
    <string name="dnm_minimize_notif_title">Restore %1$s</string>
    <string name="dnm_minimize_notif_summary">This floating app has been minimized</string>
    <string name="default_value">Default Value</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="help">Help</string>
    <string name="close_once">Remind me later</string>
    <string name="close_forever">@android:string/ok</string>
    <string name="pref_main_top_title">General</string>
    <string name="pref_window_top_title">Popup Window</string>
    <string name="pref_window_top_summary">Customize Window Properties</string>
    <string name="pref_alpha_title">Popup Transparency</string>
    <string name="pref_alpha_summary">Transparency of Window</string>
    <string name="pref_dim_title">Popup Dim</string>
    <string name="pref_dim_summary">Background Dimming of Popup</string>
    <string name="pref_gravity_title">Popup position</string>
    <string name="pref_gravity_summary">Position of the Popup</string>
    <string name="pref_behavior_title">Window</string>
    <string name="pref_overlay_title">Titlebar</string>
    <string name="pref_size_top_title">Popup Size</string>
    <string name="pref_size_top_summary">Customize Size of the Popup</string>
    <string name="pref_width_portrait_title">Portrait Width</string>
    <string name="pref_width_portrait_summary">Width of Popup in Portrait</string>
    <string name="pref_height_portrait_title">Portrait Height</string>
    <string name="pref_height_portrait_summary">Height of Popup in Portrait</string>
    <string name="pref_width_landscape_title">Landscape Width</string>
    <string name="pref_width_landscape_summary">Width of Popup in Landscape</string>
    <string name="pref_height_landscape_title">Landscape Height</string>
    <string name="pref_height_landscape_summary">Height of Popup in Landscape</string>
    <string name="pref_all_maximized_title">Start All Movable Windows Maximized</string>
    <string name="pref_all_maximized_summary">Maximize everything from start</string>
    <string name="pref_behave_top_title">Popup Behavior</string>
    <string name="pref_behave_top_summary">Customize behaviour of popup window. </string>
    <string name="pref_app_pause_title">App Pausing</string>
    <string name="pref_app_pause_summary_off">Do not pause the below app when a Floating window is above. (Toggling may cause bugs)</string>
    <string name="pref_app_pause_summary_on">Pause the below app when a Floating window is above. (May cause bugs)</string>
    <string name="pref_keyboard_title">Keyboard Mode</string>
    <string name="pref_keyboard_summary">The action the popup will do when a keyboard opens. (Changing this may cause bugs)</string>
    <string name="pref_disable_auto_close_title">Disable Auto Close</string>
    <string name="pref_disable_auto_close_summary">Disable closing the app window when screen turns off or home is pressed. (Changing this may cause bugs)</string>
    <string name="pref_show_recents_title">Show App in Recents</string>
    <string name="pref_show_recents_summary">Allows the app to be shown in the recents screen. (Not recommended)</string>
    <string name="pref_force_recents_title">Force App in Recents</string>
    <string name="pref_force_recents_summary">Force the app to be shown in recents screen, regardless of the app\'s configuration. (Not recommended)</string>
    <string name="pref_force_open_app_above_halo_title">Force New Windows to open in floating mode</string>
    <string name="pref_force_open_app_above_halo_summary">If an app is currently open in floating mode, new apps that open above it are forced to open in floating mode. (Recommended)</string>
    <string name="pref_force_open_alt_gravity_title">Force new windows snap side by side</string>
    <string name="pref_force_open_alt_gravity_summary">No floating apps on start, just AeroSnaps</string>
    <string name="pref_blacklist_title">Ignore Apps</string>
    <string name="pref_blacklist_summary">Choose a list of apps to never open in floating mode. (Use in case the app doesn\'t work in floating mode)</string>
    <string name="pref_blacklist_dialog">Newly ignored apps needs to be force-closed for changes to take effect.\n\nYou may single press on the app icon for the app info to open. After which, you may select Force Stop.</string>
    <string name="pref_blacklist_error">There was an error opening the App Info.\nThis is the error.\n\n</string>
    <string name="pref_whitelist_title">Force Apps</string>
    <string name="pref_whitelist_summary">Choose a list of apps to always open in floating mode</string>
    <string name="pref_whitelist_dialog">Newly added apps needs to be force-closed for changes to take effect.\n\nYou may single press on the app icon for the app info to open. After which, you may select Force Stop.\n\nNote that ignoring has a higher priority over forcing if you were to select the same app in both lists.</string>
    <string name="pref_maximized_title">Maximized Apps</string>
    <string name="pref_maximized_summary">Choose a list of apps to always open maximized</string>
    <string name="pref_maximized_dialog">Newly auto maximized apps need to be force-closed for changes to take effect.\n\nYou may single press on the app icon for the app info to open. After which, you may select Force Stop.</string>
    <string name="pref_launcher_title">DEPRECATED: FloatDot Launcher Apps</string>
    <string name="pref_launcher_summary">Choose a list of apps to show in launcher menu. (DEPRECATED: FloatDot Launcher is not relevant to Desktop Mode)</string>
    <string name="pref_launcher_dialog">To reopen apps as movable you might need to force-close them for changes to take effect.\n\nYou may single press on the app icon for the app info to open. After which, you may select Force Stop.</string>
    <string name="pref_whiteblacklist_title">DEPRECATED: Ignoring/Forcing Options</string>
    <string name="pref_whiteblacklist_summary">Choose a different behavior to use the black and whitelist. (DEPRECATED: Always allow all apps, except those ignored)</string>
    <string name="pref_force_snap_title">Autosnap windows</string>
    <string name="pref_force_snap_summary">If new windows should automaticaly snap side by side. (Not recommended, may have bugs)</string>
    <string name="pref_move_max_range_title">Sensibility</string>
    <string name="pref_move_max_range_summary">Set less to unsnap easier, more to avoid unwanted unsnaps</string>
    <string name="floating_flags">DEPRECATED: Floating flag system id</string>
    <string name="floating_flags_summary">This flag is attached to windows so the systems knows their status.\nChoose the Old style to have old launchers working, but you will have infamous Chrome bug.\nNB: To use new flag your launcher must pass it instead of/with the old one.\n(DEPRECATED: DesktopMode always uses new id)</string>
    <string name="pref_movable_top_title">Dragging</string>
    <string name="pref_movable_top_summary">A feature similar to multi-window for true multi-tasking.</string>
    <string name="pref_movable_sub_titlebar_title">TitleBar Settings</string>
    <string name="pref_movable_sub_titlebar_summary">Change Top TitleBar Behaviour</string>
    <string name="pref_movable_sub_moving_title">Moving Settings</string>
    <string name="pref_movable_sub_moving_summary">Change Moving Window Behaviour</string>
    <string name="pref_movable_sub_resizing_title">Resizing Settings</string>
    <string name="pref_movable_sub_resizing_summary">Change Resizing Window Behaviour</string>
    <string name="pref_movable_sub_triangle_title">Triangle Settings</string>
    <string name="pref_movable_sub_triangle_summary">Change Bottom Left Triangle Properties</string>
    <string name="pref_movable_sub_quadrant_title">Quadrant Settings</string>
    <string name="pref_movable_sub_quadrant_summary">Change Bottom Right Quadrant Properties</string>
    <string name="pref_movable_sub_border_title">Border Settings</string>
    <string name="pref_movable_sub_border_summary">Change Window Border Properties</string>
    <string name="pref_movable_sub_other_title">Other Settings</string>
    <string name="pref_movable_sub_other_summary">Change Miscellaneous Properties</string>
    <string name="crashlytics_install_title">Crashlytics consent</string>
    <string name="crashlytics_install_message">Would you like us to collect information about 3rd-party app crashes related to this extension?\n\nIf you change your mind, you can change this in “Crashlytics Settings” in the overflow menu.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="gen_error_message">Floating Windows has crashed. We have been notified, and will fix it as soon as possible. Sorry for the inconvenience.</string>
    <string name="restart">RESTART</string>
    <string name="error_splash"><![CDATA[<ERROR />]]></string>
</resources>