<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceLargeInverse"
            android:textColor="@color/absWhite"
            android:paddingBottom="16dp"
            android:text="@string/crashlytics_install_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crashlytics_install_message"
            android:textColor="@color/absWhite"
            android:paddingBottom="16dp"/>
        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?buttonBarStyle"
            app:allowStacking="false">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?buttonBarPositiveButtonStyle"
                android:textColor="@color/absWhite"
                android:text="@string/yes"
                android:id="@+id/crashlyticsAccept"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?buttonBarNegativeButtonStyle"
                android:textColor="@color/absWhite"
                android:text="@string/no"
                android:id="@+id/crashlyticsDecline"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?buttonBarNegativeButtonStyle"
                android:textColor="@color/absWhite"
                android:text="@string/privacy_policy"
                android:id="@+id/privacyPolicy" />
        </android.support.v7.widget.ButtonBarLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>